Fixed colours used in Jump To Date Plugin specifically for Dark theme

--- a/src/scss/Plugins/Community/jumpToDate.scss
+++ b/src/scss/Plugins/Community/jumpToDate.scss
@@ -26,6 +26,7 @@
 
         .flatpickr-prev-month, 
         .flatpickr-next-month {
+            fill: var(--text-normal);
             padding: 7px;
         }
 
@@ -38,6 +39,7 @@
             .flatpickr-monthDropdown-months {
                 font-weight: 600;
                 text-align: center;
+                color: var(--text-normal);
 
                 .flatpickr-monthDropdown-month:hover {
                     background-color: red;
@@ -51,6 +53,14 @@
                     font-weight: 800;
                     color: var(--interactive-accent-dark);
                     box-shadow: unset;
+                }
+
+                .arrowUp::after {
+                    border-bottom-color: var(--text-normal);
+
+                }
+                .arrowDown::after {
+                    border-top-color: var(--text-normal);
                 }
             }
         }
@@ -112,8 +122,9 @@
 
         .flatpickr-weekdays {
             border-bottom: 1px solid var(--table-border-color);
-
+            
             span.flatpickr-weekday {
+                color: var(--text-muted);
                 font-size: 10px;
                 letter-spacing: 1px;
                 text-transform: uppercase;
